tests/error/nested_func_def.clac
// TEST: expect_compile_error
: foo : bar 1 ; ;
1 print quit
